--- a/CapaLogica/CapaLogica.csproj
+++ b/CapaLogica/CapaLogica.csproj
@@ -83,6 +83,7 @@
     <Compile Include="LogAuthUser.cs" />
     <Compile Include="LogAutos.cs" />
     <Compile Include="LogConductor.cs" />
+    <Compile Include="LogMantenimiento.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
