--- a/CapaEntidad/CapaEntidad.csproj
+++ b/CapaEntidad/CapaEntidad.csproj
@@ -81,6 +81,7 @@
   <ItemGroup>
     <Compile Include="Automovil.cs" />
     <Compile Include="Conductor.cs" />
+    <Compile Include="entMantenimiento.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Usuario.cs" />
   </ItemGroup>
