--- a/CapaEntidad/CapaEntidad.csproj
+++ b/CapaEntidad/CapaEntidad.csproj
@@ -81,8 +81,12 @@
   <ItemGroup>
     <Compile Include="Automovil.cs" />
     <Compile Include="Conductor.cs" />
+    <Compile Include="Contratista.cs" />
     <Compile Include="entMantenimiento.cs" />
+    <Compile Include="OrdenMantenimiento.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Taller.cs" />
+    <Compile Include="Tecnico.cs" />
     <Compile Include="Usuario.cs" />
   </ItemGroup>
   <ItemGroup>
