--- a/CapaLogica/CapaLogica.csproj
+++ b/CapaLogica/CapaLogica.csproj
@@ -84,6 +84,7 @@
     <Compile Include="LogAutos.cs" />
     <Compile Include="LogConductor.cs" />
     <Compile Include="LogMantenimiento.cs" />
+    <Compile Include="LogTaller.cs" />
     <Compile Include="LogTecnico.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Validators.cs" />
