fix nombre de la entidad y se añadio atributos a la orden

--- a/CapaEntidad/CapaEntidad.csproj
+++ b/CapaEntidad/CapaEntidad.csproj
@@ -81,7 +81,7 @@
   <ItemGroup>
     <Compile Include="Automovil.cs" />
     <Compile Include="Conductor.cs" />
-    <Compile Include="Contratista.cs" />
+    <Compile Include="Contratistas.cs" />
     <Compile Include="entMantenimiento.cs" />
     <Compile Include="OrdenMantenimiento.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
